common/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - vault.bunnana.dev
    secretName: vault-cert-tls
  rules:
  - host: vault.bunnana.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
